objects/TM__c/TM__c.object-meta.xml
<CustomObject>
    <label>T&amp;M</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T&amp;Ms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>