objects/TM__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>T&amp;Ms (Account Executive)</relationshipLabel>
    <relationshipName>TMs</relationshipName>
    <type>Lookup</type>
</CustomField>