objects/TM__c/fields/Alternate_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Site_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site Address Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Site_Address__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_to_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Site_Address__c</referenceTo>
    <relationshipLabel>T&amp;Ms</relationshipLabel>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>