objects/TM__c/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>T&amp;Ms (Bill-to Customer)</relationshipLabel>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>