objects/TM__c/fields/Billing_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule_Id__c</fullName>
    <formula>IF(Sales_Order__r.Contract__r.Billing_Rule__c != null,Sales_Order__r.Contract__r.Billing_Rule__c, '')</formula>
    <label>Billing Rule Id</label>
    <type>Text</type>
</CustomField>