objects/TM__c/fields/Billing_Worksheet_Line_Created__c.field-meta.xml
<CustomField>
    <fullName>Billing_Worksheet_Line_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing_Worksheet_Line_Created</label>
    <type>Checkbox</type>
</CustomField>