objects/TM__c/fields/Certified_PW_Job__c.field-meta.xml
<CustomField>
    <fullName>Certified_PW_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified(PW) Job</label>
    <type>Checkbox</type>
</CustomField>