objects/TM__c/fields/Check_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Confirmed_Date__c</fullName>
    <formula>NOT(ISBLANK(Confirmed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Confirmed Date</label>
    <type>Checkbox</type>
</CustomField>