objects/TM__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>