objects/TM__c/fields/Confirmed_by__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>T_Ms1</relationshipName>
    <type>Lookup</type>
</CustomField>