objects/TM__c/fields/Confirmed_to_Invoice_Age__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_to_Invoice_Age__c</fullName>
    <formula>Sales_Invoice_Date__c - Confirmed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmed to Invoice Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>