objects/TM__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>T&amp;Ms</relationshipLabel>
    <relationshipName>TMs</relationshipName>
    <type>Lookup</type>
</CustomField>