objects/TM__c/fields/Credit_HOld__c.field-meta.xml
<CustomField>
    <fullName>Credit_HOld__c</fullName>
    <formula>Bill_to_Customer__r.Credit_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hold</label>
    <type>Checkbox</type>
</CustomField>