objects/TM__c/fields/Customer_Not_Available__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Not Available</label>
    <type>Checkbox</type>
</CustomField>