objects/TM__c/fields/D365_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>D365_Project_ID__c</fullName>
    <formula>Sales_Order__r.D365_Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D365 Project ID</label>
    <type>Text</type>
</CustomField>