objects/TM__c/fields/Date_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_Check__c</fullName>
    <formula>Confirmed_Date__c &lt; Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Check</label>
    <type>Checkbox</type>
</CustomField>