objects/TM__c/fields/Day_of_Job__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Job__c</fullName>
    <label>Day of Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>