objects/TM__c/fields/Days_Sales_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Sales_Outstanding__c</fullName>
    <formula>IF(ISBLANK(Fully_Paid_Date__c), TODAY()- Posting_Date__c   , Fully_Paid_Date__c - Posting_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Sales Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>