objects/TM__c/fields/Days_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Invoice__c</fullName>
    <formula>Sales_Invoice_Date__c - Datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>