objects/TM__c/fields/Days_to_paid__c.field-meta.xml
<CustomField>
    <fullName>Days_to_paid__c</fullName>
    <formula>Fully_Paid_Date__c   -   Posting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>