objects/TM__c/fields/Desired_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Scheduled_Date__c</fullName>
    <label>Desired Scheduled Date</label>
    <type>Date</type>
</CustomField>