objects/TM__c/fields/Display_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Company_Name__c</fullName>
    <formula>Subsidiary_Company__r.Display_Name__c</formula>
    <label>Display Company Name</label>
    <type>Text</type>
</CustomField>