objects/TM__c/fields/Emergency_TM__c.field-meta.xml
<CustomField>
    <fullName>Emergency_TM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency T&amp;M</label>
    <type>Checkbox</type>
</CustomField>