objects/TM__c/fields/Field_Tech_Count__c.field-meta.xml
<CustomField>
    <fullName>Field_Tech_Count__c</fullName>
    <label>Field Tech Count</label>
    <summaryFilterItems>
        <field>TM_Line__c.Resource_Type__c</field>
        <operation>equals</operation>
        <value>a1Sf4000001MWT5EAO</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>