objects/TM__c/fields/Field_Tech_Hours__c.field-meta.xml
<CustomField>
    <fullName>Field_Tech_Hours__c</fullName>
    <label>Field Tech Hours</label>
    <summarizedField>TM_Line__c.Total_Job_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>TM_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TM_Line__c.Resource_Type__c</field>
        <operation>equals</operation>
        <value>a1Sf4000001MWT5EAO</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>