objects/TM__c/fields/Field_TM_PDF_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Field_TM_PDF_Recipient__c</fullName>
    <label>Field TM PDF Recipient</label>
    <type>Email</type>
</CustomField>