objects/TM__c/fields/Field_TM_PDF_Sent__c.field-meta.xml
<CustomField>
    <fullName>Field_TM_PDF_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field TM PDF Sent</label>
    <type>Checkbox</type>
</CustomField>