objects/TM__c/fields/Fully_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Paid_Date__c</fullName>
    <formula>Sales_Invoice__r.Date_of_Last_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Paid Date</label>
    <type>Date</type>
</CustomField>