objects/TM__c/fields/Invoice_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created_Date__c</fullName>
    <formula>Sales_Invoice__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Created Date</label>
    <type>Date</type>
</CustomField>