objects/TM__c/fields/Invoice_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Status__c</fullName>
    <formula>IF(NOT(ISBLANK(Sales_Invoice__c)), Sales_Invoice__r.Payment_Status__c,  NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Payment Status</label>
    <type>Text</type>
</CustomField>