objects/TM__c/fields/Invoiceable__c.field-meta.xml
<CustomField>
    <fullName>Invoiceable__c</fullName>
    <formula>(TEXT(Status__c) = 'Ready to Bill'  ||  TEXT(Status__c) = 'Partially Invoiced' ||  TEXT(Status__c) = 'Received By Billing' ||  TEXT(Status__c) = 'Confirmed') &amp;&amp;  (Total_Lines__c != Invoiced_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiceable</label>
    <type>Checkbox</type>
</CustomField>