objects/TM__c/fields/Invoiced_Lines__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Lines__c</fullName>
    <label>Invoiced Lines</label>
    <summaryFilterItems>
        <field>TM_Line__c.Invoiced__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>