objects/TM__c/fields/Is_Fully_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Is_Fully_Invoiced__c</fullName>
    <formula>IF(Invoiced_Lines__c &gt; 0, IF(Total_Lines__c == Invoiced_Lines__c, TRUE, FALSE), FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Fully Invoiced</label>
    <type>Checkbox</type>
</CustomField>