objects/TM__c/fields/IVTotal__c.field-meta.xml
<CustomField>
    <fullName>IVTotal__c</fullName>
    <formula>Sales_Invoice__r.Invoice_Amt_Incl_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>