objects/TM__c/fields/Job_Complete__c.field-meta.xml
<CustomField>
    <fullName>Job_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Complete</label>
    <type>Checkbox</type>
</CustomField>