objects/TM__c/fields/Last_Signature_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Signature_Request_Date__c</fullName>
    <label>Last Signature Request Date</label>
    <type>DateTime</type>
</CustomField>