objects/TM__c/fields/Lump_Sum_Order__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lump Sum Order</label>
    <type>Checkbox</type>
</CustomField>