objects/TM__c/fields/Manual_Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Manual_Closed_At__c</fullName>
    <label>Manual Closed At</label>
    <type>DateTime</type>
</CustomField>