objects/TM__c/fields/Manual_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Manual_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>