objects/TM__c/fields/Max_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Max_Line_No__c</fullName>
    <label>Max Line No</label>
    <summarizedField>TM_Line__c.Line_No__c</summarizedField>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>