objects/TM__c/fields/Mobile_Email__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Email</label>
    <type>Checkbox</type>
</CustomField>