objects/TM__c/fields/Mobile_First_Save_At__c.field-meta.xml
<CustomField>
    <fullName>Mobile_First_Save_At__c</fullName>
    <label>Mobile First Save At</label>
    <type>DateTime</type>
</CustomField>