objects/TM__c/fields/Mobile_TM__c.field-meta.xml
<CustomField>
    <fullName>Mobile_TM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile T&amp;M</label>
    <type>Checkbox</type>
</CustomField>