objects/TM__c/fields/Modification_Age__c.field-meta.xml
<CustomField>
    <fullName>Modification_Age__c</fullName>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modification Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>