objects/TM__c/fields/New_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Posting_Date__c</fullName>
    <formula>Sales_Invoice__r.New_Posting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Posting Date</label>
    <type>Date</type>
</CustomField>