objects/TM__c/fields/Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Id__c</fullName>
    <label>Old Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>