objects/TM__c/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <formula>Sales_Order__r.Project_Coordinator__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM</label>
    <type>Text</type>
</CustomField>