objects/TM__c/fields/PO_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>PO_Reference_No__c</fullName>
    <label>PO/Reference No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>