objects/TM__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <formula>Sales_Invoice__r.Posting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>