objects/TM__c/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>T&amp;Ms (Project Manager)</relationshipLabel>
    <relationshipName>TMs1</relationshipName>
    <type>Lookup</type>
</CustomField>