objects/TM__c/fields/Project_Manager_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Manager Reviewed</label>
    <type>Checkbox</type>
</CustomField>