objects/TM__c/fields/PV_0438__c.field-meta.xml
<CustomField>
    <fullName>PV_0438__c</fullName>
    <label>PV-0438</label>
    <summarizedField>TM_Line__c.Line_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>TM_Line__c.Resource__c</field>
        <operation>equals</operation>
        <value>a0rf4000001ZREu</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>