objects/TM__c/fields/Rate_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Rate_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Sheet</label>
    <referenceTo>Rate_Sheet__c</referenceTo>
    <relationshipLabel>T&amp;Ms</relationshipLabel>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>