objects/TM__c/fields/Ready_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Close</label>
    <type>Checkbox</type>
</CustomField>