objects/TM__c/fields/Report_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Scheduled_Date__c</fullName>
    <formula>Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Scheduled Date</label>
    <type>Date</type>
</CustomField>