objects/TM__c/fields/Resource1__c.field-meta.xml
<CustomField>
    <fullName>Resource1__c</fullName>
    <label>Resource1</label>
    <summaryFilterItems>
        <field>TM_Line__c.Resource_Name__c</field>
        <operation>equals</operation>
        <value>Ned Willard</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>