objects/TM__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <inlineHelpText>Roll up field - Labor line count</inlineHelpText>
    <label>Labor Resource Count</label>
    <summaryFilterItems>
        <field>TM_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>