objects/TM__c/fields/Reviewed_At_Status__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At_Status__c</fullName>
    <label>Reviewed At Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>