objects/TM__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>