objects/TM__c/fields/Roll_Off_Mover__c.field-meta.xml
<CustomField>
    <fullName>Roll_Off_Mover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll Off Mover</label>
    <type>Checkbox</type>
</CustomField>