objects/TM__c/fields/Sales_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Date__c</fullName>
    <formula>Sales_Invoice__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Invoice Date</label>
    <type>Date</type>
</CustomField>