objects/TM__c/fields/Sales_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Status__c</fullName>
    <formula>Sales_Invoice__r.Sales_Invoice_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Invoice Status</label>
    <type>Text</type>
</CustomField>