objects/TM__c/fields/Sales_Invoice_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Total_Amount__c</fullName>
    <formula>Sales_Invoice__r.Invoice_Amt_Incl_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Invoice Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>