objects/TM__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order__c.Subsidiary_Company__c</field>
            <operation>equals</operation>
            <valueField>$Source.Subsidiary_Company__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Order__c.Service_Center__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Center__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Order__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>T&amp;Ms</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>