objects/TM__c/fields/Sales_Order_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Instructions__c</fullName>
    <label>Sales Order Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>