objects/TM__c/fields/Sales_Order_PW__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_PW__c</fullName>
    <description>Temporary, use for data fix</description>
    <formula>Sales_Order__r.Prevailing_Wage_Job__c</formula>
    <label>Sales Order PW</label>
    <type>Checkbox</type>
</CustomField>