objects/TM__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <formula>Sales_Order__r.Sales_Order_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Type</label>
    <type>Text</type>
</CustomField>