objects/TM__c/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <description>Status equal Schedule, Confirm, Mobile Review, Received By Billing and Ready to Bill</description>
    <formula>ISPICKVAL(Status__c, 'Confirmed')

||

ISPICKVAL(Status__c, 'Scheduled')

||

ISPICKVAL(Status__c, 'Mobile Review')
||

ISPICKVAL(Status__c, 'Received By Billing')
||

ISPICKVAL(Status__c, 'Ready to Bill')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC</label>
    <type>Checkbox</type>
</CustomField>