objects/TM__c/fields/SC_Region__c.field-meta.xml
<CustomField>
    <fullName>SC_Region__c</fullName>
    <formula>Service_Center__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Region</label>
    <type>Text</type>
</CustomField>