objects/TM__c/fields/SC_Rep__c.field-meta.xml
<CustomField>
    <fullName>SC_Rep__c</fullName>
    <formula>Service_Center__r.TM_Service_Rep__r.FirstName  + ' ' +  Service_Center__r.TM_Service_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Service Rep</label>
    <type>Text</type>
</CustomField>