objects/TM__c/fields/Schedule_Count__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Schedule Count: Count number of times status was changed to Schedule</description>
    <label>Schedule Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>