objects/TM__c/fields/Scheduled_Date_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Weekend__c</fullName>
    <formula>IF( 
OR( 
(MOD( Scheduled_Date__c - DATE(1900, 1, 7), 7) == 0), 
(MOD( Scheduled_Date__c - DATE(1900, 1, 7), 7) == 6)), 
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Date Weekend</label>
    <type>Checkbox</type>
</CustomField>