objects/TM__c/fields/Scheduled_to_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_to_Invoice_Date__c</fullName>
    <formula>IF(ISBLANK( Sales_Invoice__r.Invoice_Date__c ), TODAY()- Scheduled_Date__c, Sales_Invoice__r.Invoice_Date__c -  Scheduled_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled to Invoice Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>