objects/TM__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <label>Site City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>