objects/TM__c/fields/Site_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>T&amp;Ms (Site Contact)</relationshipLabel>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>