objects/TM__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <label>Site Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>